# Quoridor-AI

./: .gitignore  DESIGN.md  LICENSE  LOGS.md  requirements.txt  tmp.py
refactored-src/: benchmark.py  main.py
refactored-src/Quoridor/: actions.py  numba_actions.py  numba_graph.py  numba_pathfinding.py  numpy_graph.py  pathfinding.py  vanilla_graph.py
refactored_src/: benchmark.py  tmp.py
refactored_src/AI/: mcts.py
refactored_src/Py_Quoridor/: actions.py  bitboard.py  display.py  numba_graph.py  numpy_graph.py  pathfinding.py  vanilla_graph.py
refactored_src/Python Quoridor/: numba_graph.py  numba_pathfinding.py
refactored_src/Quoridor/: actions.py  implementations.md  numba_graph.py  numpy_graph.py
refactored_src/Rs_Quoridor/: Cargo.toml  benchmark_actions_small.txt  data_vis.ipynb  init_elo_results.md
refactored_src/Rs_Quoridor/fin-src/: final_board.rs  final_mcts.rs
refactored_src/Rs_Quoridor/initial-src/: bitboard.rs  bitboard_mini.rs  board.rs  data_vis.ipynb  graph.rs  graph_mini.rs  main.rs  tictactoe.rs
refactored_src/Rs_Quoridor/src/: bitboard.rs  bitboard_mini.rs  board.rs  data.ipynb  final_board.rs  final_mcts.rs  graph.rs  graph_mini.rs  main.rs  mcts.rs  perf.rs  test.rs  tictactoe.rs  tmp.txt
src/: _test.py  cli.py  manhatten_testing.py  mcts_testing.py  shift_testing.py  test.py  testing.py  tmp.py
src/AI/: base.py  mcts.py  new_mcts.py
src/Quoridor/: b.py  b_optim.py  b_pathfinding_optim.py  b_pathfinding_optim_path.py  bg_pathfinding.py  bitboard.py  bitboard_optimised.py  bitboard_pathfinding.py  functions.py  g.py  g_optim.py  (+8 more)
(+3 files in other folders)
