[package]
name = "quoridor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.30"
csv = "1.2.2"
ordered-float = "3.9.1"
priority-queue = "1.3.2"
rand = { version = "0.8.5", features = ["small_rng"] }
rand_chacha = "0.3.1"
rand_distr = "0.4.3"
rand_pcg = "0.3.1"
rand_seeder = "0.2.3"
rayon = "1.8.0"
serde = { version = "1", features = ["derive"] }
